--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,6 @@ main:
   #- title: "Talks"
     #url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  #- title: "Teaching"
+    #url: /teaching/    
 
