--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ og_image                 :  # Open Graph/Twitter default site image
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links: # An aRay of links to social media profiles
 
 
 # Analytics
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Akash Sawarkar"
   avatar           : "dp_option_1.jpg"
-  bio              : "RResearch Scholar at JNU"
+  bio              : "Research Scholar at JNU"
   location         : "Delhi, India"
   employer         : 
   pubmed           : 
