--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Delhi, India"
   employer         : 
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=mq8C98wAAAAJ"
   email            : "asawarkar1213@gmail.com"
   researchgate     :  
   uri              :
